# pnl_calc_imiagkov

./: CMakeLists.txt  README.md  main.cpp
data/: moretickers.csv
src/: CMakeLists.txt  iouthandler.h  pnl_calc.cpp  pnl_calc.h
test/: CMakeLists.txt  pnl_calc.t.cpp
